# openstack-chef-repo

./: .gitignore  .gitreview  .kitchen.dokken.yml  .kitchen.multi.yml  .kitchen.yml  .rubocop.yml  .rubocop_todo.yml  .zuul.yaml  Berksfile  CHANGELOG.md  CONTRIBUTING.md  Cheffile  Gemfile  Gemfile-Provisioning  README.md  Rakefile  TESTING.md  TODO.org  Vagabondfile  Vagrantfile  Vagrantfile-aio-neutron  Vagrantfile-aio-nova  Vagrantfile-multi-neutron  aio-neutron.rb  aio-nova.rb  allinone.rb  bindep.txt  bootstrap.sh  destroy_all.rb  infrastructure.yml  multi-neutron.rb  multi-node.rb  multi-nova.rb  setup.cfg  tox.ini  vagrant_linux.rb
.chef/: encrypted_data_bag_secret  knife.rb
.delivery/: project.toml
cookbooks/: .gitignore
doc/: aio-bare-metal.md  aio-neutron.md  aio-nova.md  allinone.md  data_bags.md  databags.md  multi-neutron.md  multi-nova.md  multi_node.md  multinode.md  openstack-service.conf.erb.md  requirements.txt  tools.md
documentation/: glance.md  horizon.md  keystone.md  nova.md  style-guide.md
environments/: _default.json  allinone-centos7.json  allinone-ubuntu14.json  allinone-ubuntu16.json  allinone.json  baremetal-aio-neutron.json  example.json  example.rb  galera_example.json  integration-aio-neutron.json  integration-ubuntu16.json  integration.json  multi-node-centos7.json  multi-node-ubuntu14.json  multi-node-ubuntu16.json  multinode-centos7.json  multinode-ubuntu16.json  multinode.json  production.rb  testing.rb  vagrant-aio-centos7-neutron.json  vagrant-aio-centos7-nova.json  vagrant-aio-neutron.json  vagrant-aio-nova.json  vagrant.rb  (+6 more)
(+230 files in other folders)
