[metadata]
name = chef-openstack
summary = Chef cookbooks for deploying OpenStack
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/chef-openstack/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
